Fix dark mode title color

--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -831,13 +831,15 @@ table.expenses
 
   body,
   .timeline-description,
-  h2,
-  h2 button,
-  h2 button a,
   .timeline-filter,
   .timeline-icon i,
   .attribution
     color: $dark-main-color
+
+    h2,
+    h2 > button,
+    h2 > button a
+      color: $dark-main-color
 
   a,
   .timeline-description a,
